Update mri to work with ARM Embedded GCC toolchain.
* Removed the 100 bytes of floating point registers from the CPU context as
  this newer version of gdb better understands the cortex-m architecture.
* Was able to remove 200 bytes from the packet buffer as well since it requires
  two hex digits per byte in the context for 'G', register set commands.
* Added support for the qXfer:features:read command so that the debugger can
  ask mri for target.xml to describe the architecture of the target device.
  I thought this would let the older Code Sourcery toolchain know that the
  cortex-m3 architecture didn't have floating point registers but it still
  expects them so this update breaks MRI for that toolchain.
* Updated makefile to no longer use the -fpromote-loop-indices as it isn't
  suppored in this new toolchain.  I guess it wasn't accepted into the main
  GCC branch.
  https://answers.launchpad.net/gcc-arm-embedded/+question/184675
* Added .thumb_func directive before every ASM routine in MRI which can be
  called from C code.  Without it, the linker corrupted the calls to these
  routines.
* Added __mriGetMbedUid() to mbed1768_asm.S so that mri can be used on mbed
  devices but don't link with the mbed SDK libraries.
* New compiler caught more cases of unused variables that I
  needed to silence by adding (void) references.
* Bumped version to 0.2 as the 0.1 version will remain for Code Sourcery.

--- a/mri/makefile
+++ b/mri/makefile
@@ -65,11 +65,7 @@ DEFINES = -DTARGET_LPC1768
 OPTIMIZATION = s
 
 #  Compiler Options
-GPFLAGS = -O$(OPTIMIZATION) -gstabs+3 -mcpu=cortex-m3 -mthumb -mthumb-interwork -fshort-wchar -ffunction-sections -fdata-sections -fpromote-loop-indices -Wall -Wextra -Wimplicit -Wcast-align -Wpointer-arith -Wredundant-decls -Wshadow -Wcast-qual -Wcast-align -fno-exceptions
-GPFLAGS += $(patsubst %,-I%,$(INCDIRS))
-GPFLAGS += $(DEFINES)
-
-GCFLAGS = -O$(OPTIMIZATION) -gstabs+3 -mcpu=cortex-m3 -mthumb -mthumb-interwork -fshort-wchar -ffunction-sections -fdata-sections -fpromote-loop-indices -Wall -Wextra -Werror -fno-exceptions
+GCFLAGS = -O$(OPTIMIZATION) -gstabs+3 -mcpu=cortex-m3 -mthumb -mthumb-interwork -ffunction-sections -fdata-sections -Wall -Wextra -Werror -fno-exceptions
 GCFLAGS += $(patsubst %,-I%,$(INCDIRS))
 GCFLAGS += $(DEFINES)
 
