Move memory read/write into platform abstraction.
Previously the memory read/write commands assumed that MRI was always
running as a monitor on the target itself.  This meant that they could
just read/write memory directly when such a request was made.  This
commit adds __mriPlatform_MemRead/Write32/16/8() routines to the
platform porting layer.  This will allow me in the future to provide
platform abstractions for reading core dumps and debugging remote
targets via CMSIS-DAP in the future.

The memory read/write routines in mri/memory.c now use these new
platform abstraction routines.

NOTE: There is still a lot of other platform code for the cortex-m
and lpc1768 targets which need to access target memory through these
routines as well.  Without those changes, it isn't possible to use MRI
code for remote debugging via JTAG, SWD, etc.  It is enough for me to
get started with a core dump utility.

--- a/mri/makefile
+++ b/mri/makefile
@@ -39,6 +39,7 @@ CSRCS = $(wildcard *.c)
 ASRCS =  $(wildcard *.S)
 
 PLAT_CSRCS = platforms/architectures/cortex-m/cortex-m.c
+PLAT_CSRCS += platforms/memory/native/native-mem.c
 PLAT_CSRCS += platforms/devices/lpc176x/lpc176x_uart.c
 PLAT_CSRCS += platforms/devices/lpc176x/lpc176x.c
 PLAT_CSRCS += platforms/boards/mbed1768/mbed1768.c
