Enable CPPUTEST_USE_VPATH for unit test build
This makes for a cleaner directory output when the sources being tested
are in directories like ../mri

--- a/tests/makefile
+++ b/tests/makefile
@@ -26,6 +26,8 @@ CPPUTEST_CFLAGS += -std=c99
 CPPUTEST_CFLAGS += -Wextra 
 CPPUTEST_CFLAGS += -Wstrict-prototypes
 
+CPPUTEST_USE_VPATH = Y
+
 SRC_DIRS =                                      \
 	../mri                                      \
 	../mri/platforms/memory/native              \
