New build system
I moved a lot of files around and completely replaced the existing
makefile.  It is no longer recursive.  The makefile in the root
directory knows how to build everything.

**Make Rules**
arm - *Default* Just builds code needed to run on ARM targets.
host - Builds core lib and unit tests which run on host build machine.
all - Combines arm and host.
gcov - Builds core libs and unit tests with code coverage enabled.
clean - Cleans out all output files.

I also added a deploy script to archive the new script that I now use
for building and deploying MRI to my GCC4MBED directory.

--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,8 @@
 .DS_Store
 *.o
-*.ar
+*.d
+*.a
 *_tests.txt
-CppUTest/CppUTest_tests
-CppUTest/lib/libCppUTest.a
-CppUTest/objs/
-tests/lib/
-tests/objs/
-tests/mri/
-tests/mri_tests
-drop/
-mri/obj
+*_tests
+*_tests_gcov
 gcov/
